--- a/hotels.html
+++ b/hotels.html
@@ -8,147 +8,148 @@
         <link  href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <header class="main-header">
-          <nav class="main-navigation">
-            <a class="main-header-logo" href="index.html">
-              <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
-            </a>
-            <ul class="site-navigation">
-              <li><a href="info.html">Информация</a></li>
-              <li><a href="photo-video.html">Фото и видео</a></li>
-              <li><a href="map.html">Карта штата</a></li>
-              <li class="site-navigation-current"><a>Гостиницы</a></li>
-            </ul>
-          </nav>
-       </header>
-       <main class="container">
-           <h1 class="visually-hidden">Гостиницы города Седона</h1>
-           <section class="filters">
-               <h2 class="visually-hidden">Фильтры</h2>
-                <form class="filters-form" method="get" action="https://echo.htmlacademy.ru" oninput="hotel-price-output-min.value=hotel-price.value">
-                    <fieldset>
-                        <legend class="filters-legend">Инфраструктура</legend>
-                        <ul class="filters-list">
-                            <li class="filters-option">
-                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-pool" id="filters-pool-field" checked>
-                                <label for="filters-pool-field">Бассейн</label>
-                            </li>
-                            <li class="filters-option">
-                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-parking" id="filters-parking-field">
-                                <label for="filters-parking-field">Парковка</label>
-                            </li>
-                            <li class="filters-option">
-                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-wi-fi" id="filters-wi-fi-field">
-                                <label for="filters-wi-fi-field">Wi-Fi</label>
-                            </li>
-                        </ul>
-                    </fieldset>
-                    <fieldset>
-                        <legend class="filters-legend">Тип жилья</legend>
-                        <ul class="filters-list">
-                            <li class="filters-option">
-                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-hotel" id="filters-hotel-field" checked>
-                                <label for="filters-hotel-field">Гостиница</label>
-                            </li>
-                            <li class="filters-option">
-                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-motel" id="filters-motel-field" checked>
-                                <label for="filters-motel-field">Мотель</label>
-                            </li>
-                            <li class="filters-option">
-                                <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-apartments" id="filters-apartments-field" checked>
-                                <label for="filters-apartments-field">Апартаменты</label>
-                            </li>
-                        </ul>
-                    </fieldset>
-                    <fieldset>
-                        <legend class="filters-legend">Стоимость в сутки (Р):</legend>
-                        <div class="output-area">
-                            <input type="text" class="hotel-price-output" name="hotel-price-output-min"></output>
-                            <input type="text" class="hotel-price-output" name="hotel-price-output-max"></output>
-                        </div>
-                        <input class="filters-range" type="range" min="0" max="5000" step="500" name="hotel-price" id="hotel-price-range">
-                        <button  class="button range-button" type="submit">Показать</button>
-                    </fieldset>
-                </form>
-           </section>
-           <section class="hotels">
-               <h2 class="visually-hidden">Список гостиниц</h2>
-               <section class="sorting">
-                   <h3 class="visually-hidden">Сортировка гостиниц</h3>
-                   <div class="number-of-hotels-wrapper">
-                      <label for="number-of-hotels-field">Найдено:</label>
-                      <output class="number-of-hotels-input" name="number-of-hotels-input" id="number-of-hotels-field"></output>
-                    </div>
-                    <p class="sorting-text">Сортировка:</p>
-                    <ul class="sorting-list">
-                        <li class="sorting-item"><a class="sorting-link" href="#">По цене</a></li>
-                        <li class="sorting-item"><a class="sorting-link" href="#">По типу</a></li>
-                        <li class="sorting-item"><a class="sorting-link" href="#">По рейтингу</a></li>
-                    </ul>
-                    <div class="sort-order-wrapper">
-                        <a class="sort-order-link-ascending">По возрастанию</a>
-                        <a class="sort-order-link-descending">По убыванию</a>
-                    </div>
+        <div class="main-wrapper">
+            <header class="main-header">
+              <nav class="main-navigation">
+                <a class="main-header-logo" href="index.html">
+                  <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
+                </a>
+                <ul class="site-navigation">
+                  <li><a href="info.html">Информация</a></li>
+                  <li><a href="photo-video.html">Фото и видео</a></li>
+                  <li><a href="map.html">Карта штата</a></li>
+                  <li class="site-navigation-current"><a>Гостиницы</a></li>
+                </ul>
+              </nav>
+            </header>
+            <main class="container">
+               <h1 class="visually-hidden">Гостиницы города Седона</h1>
+               <section class="filters">
+                   <h2 class="visually-hidden">Фильтры</h2>
+                    <form class="filters-form" method="get" action="https://echo.htmlacademy.ru" oninput="hotel-price-output-min.value=hotel-price.value">
+                        <fieldset>
+                            <legend class="filters-legend">Инфраструктура</legend>
+                            <ul class="filters-list">
+                                <li class="filters-option">
+                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-pool" id="filters-pool-field" checked>
+                                    <label for="filters-pool-field">Бассейн</label>
+                                </li>
+                                <li class="filters-option">
+                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-parking" id="filters-parking-field">
+                                    <label for="filters-parking-field">Парковка</label>
+                                </li>
+                                <li class="filters-option">
+                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-wi-fi" id="filters-wi-fi-field">
+                                    <label for="filters-wi-fi-field">Wi-Fi</label>
+                                </li>
+                            </ul>
+                        </fieldset>
+                        <fieldset>
+                            <legend class="filters-legend">Тип жилья</legend>
+                            <ul class="filters-list">
+                                <li class="filters-option">
+                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-hotel" id="filters-hotel-field" checked>
+                                    <label for="filters-hotel-field">Гостиница</label>
+                                </li>
+                                <li class="filters-option">
+                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-motel" id="filters-motel-field" checked>
+                                    <label for="filters-motel-field">Мотель</label>
+                                </li>
+                                <li class="filters-option">
+                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-apartments" id="filters-apartments-field" checked>
+                                    <label for="filters-apartments-field">Апартаменты</label>
+                                </li>
+                            </ul>
+                        </fieldset>
+                        <fieldset>
+                            <legend class="filters-legend">Стоимость в сутки (Р):</legend>
+                            <div class="output-area">
+                                <input type="text" class="hotel-price-output" name="hotel-price-output-min"></output>
+                                <input type="text" class="hotel-price-output" name="hotel-price-output-max"></output>
+                            </div>
+                            <input class="filters-range" type="range" min="0" max="5000" step="500" name="hotel-price" id="hotel-price-range">
+                            <button  class="button range-button" type="submit">Показать</button>
+                        </fieldset>
+                    </form>
                </section>
-               <ul class="hotels-list">
-                   <li class="hotels-item">
-                       <img src="img/hotel-amara-resort-and-spa.jpg" height="90" width="135" alt="Гостиница Amara Resort & Spa">
-                       <h3 class="hotel-name">
-                           <a class="hotel-link" href="hotel-amara-resort-and-spa.html">Amara Resort & Spa</a>
-                       </h3>
-                       <p class="hotel-type">Гостиница</p>
-                       <p class="hotel-price">от 4000</p>
-                       <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
-                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
-                       <div class="rating rating-stars">
-                           <img src="img/star.svg" alt="Рейтинг гостиницы 4 звезды">
-                           <img src="img/star.svg" alt="">
-                           <img src="img/star.svg" alt="">
-                           <img src="img/star.svg" alt="">
-                       </div>
-                       <p class="raing rating-number">
-                           Рейтинг: 8.5
-                       </p>
-                   </li>
-                   <li class="hotels-item">
-                       <img src="img/hotel-desert-quail-inn.jpg" height="90" width="135" alt="Мотель Desert Quail Inn">
-                       <h3 class="hotel-name">
-                           <a class="hotel-link" href="hotel-desert-quail-inn.html">Desert Quail Inn</a>
-                       </h3>
-                       <p class="hotel-type">Мотель</p>
-                       <p class="hotel-price">от 3000</p>
-                       <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
-                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
-                       <div class="rating rating-stars">
-                           <img src="img/star.svg" alt="Рейтинг гостиницы 3 звезды">
-                           <img src="img/star.svg" alt="">
-                           <img src="img/star.svg" alt="">
-                       </div>
-                       <p class="raing rating-number">
-                           Рейтинг: 8.9
-                       </p>
-                   </li>
-                   <li class="hotels-item">
-                       <img src="img/hotel-villas-at-poco-diablo.jpg" height="90" width="135" alt="Апартаменты Villas At Poco Diablo">
-                       <h3 class="hotel-name">
-                           <a class="hotel-link" href="hotel-villas-at-poco-diablo.html">Villas At Poco Diablo</a>
-                       </h3>
-                       <p class="hotel-type">Апартаменты</p>
-                       <p class="hotel-price">от 2000</p>
-                       <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
-                       <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
-                       <div class="rating rating-stars">
-                           <img src="img/star.svg" alt="Рейтинг гостиницы 2 звезды">
-                           <img src="img/star.svg" alt="">
-                       </div>
-                       <p class="raing rating-number">
-                           Рейтинг: 9.2
-                       </p>
-                   </li>
-               </ul>
-           </section>
-       </main>
-       <footer class="main-footer">
+               <section class="hotels">
+                   <h2 class="visually-hidden">Список гостиниц</h2>
+                   <section class="sorting">
+                       <h3 class="visually-hidden">Сортировка гостиниц</h3>
+                       <div class="number-of-hotels-wrapper">
+                          <label for="number-of-hotels-field">Найдено:</label>
+                          <output class="number-of-hotels-input" name="number-of-hotels-input" id="number-of-hotels-field"></output>
+                        </div>
+                        <p class="sorting-text">Сортировка:</p>
+                        <ul class="sorting-list">
+                            <li class="sorting-item"><a class="sorting-link" href="#">По цене</a></li>
+                            <li class="sorting-item"><a class="sorting-link" href="#">По типу</a></li>
+                            <li class="sorting-item"><a class="sorting-link" href="#">По рейтингу</a></li>
+                        </ul>
+                        <div class="sort-order-wrapper">
+                            <a class="sort-order-link-ascending">По возрастанию</a>
+                            <a class="sort-order-link-descending">По убыванию</a>
+                        </div>
+                   </section>
+                   <ul class="hotels-list">
+                       <li class="hotels-item">
+                           <img src="img/hotel-amara-resort-and-spa.jpg" height="90" width="135" alt="Гостиница Amara Resort & Spa">
+                           <h3 class="hotel-name">
+                               <a class="hotel-link" href="hotel-amara-resort-and-spa.html">Amara Resort & Spa</a>
+                           </h3>
+                           <p class="hotel-type">Гостиница</p>
+                           <p class="hotel-price">от 4000</p>
+                           <a class="button button-info" href="hotel-amara-resort-and-spa.html">Подробнее</a>
+                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                           <div class="rating rating-stars">
+                               <img src="img/star.svg" alt="Рейтинг гостиницы 4 звезды">
+                               <img src="img/star.svg" alt="">
+                               <img src="img/star.svg" alt="">
+                               <img src="img/star.svg" alt="">
+                           </div>
+                           <p class="raing rating-number">
+                               Рейтинг: 8.5
+                           </p>
+                       </li>
+                       <li class="hotels-item">
+                           <img src="img/hotel-desert-quail-inn.jpg" height="90" width="135" alt="Мотель Desert Quail Inn">
+                           <h3 class="hotel-name">
+                               <a class="hotel-link" href="hotel-desert-quail-inn.html">Desert Quail Inn</a>
+                           </h3>
+                           <p class="hotel-type">Мотель</p>
+                           <p class="hotel-price">от 3000</p>
+                           <a class="button button-info" href="hotel-desert-quail-inn.html">Подробнее</a>
+                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                           <div class="rating rating-stars">
+                               <img src="img/star.svg" alt="Рейтинг гостиницы 3 звезды">
+                               <img src="img/star.svg" alt="">
+                               <img src="img/star.svg" alt="">
+                           </div>
+                           <p class="raing rating-number">
+                               Рейтинг: 8.9
+                           </p>
+                       </li>
+                       <li class="hotels-item">
+                           <img src="img/hotel-villas-at-poco-diablo.jpg" height="90" width="135" alt="Апартаменты Villas At Poco Diablo">
+                           <h3 class="hotel-name">
+                               <a class="hotel-link" href="hotel-villas-at-poco-diablo.html">Villas At Poco Diablo</a>
+                           </h3>
+                           <p class="hotel-type">Апартаменты</p>
+                           <p class="hotel-price">от 2000</p>
+                           <a class="button button-info" href="hotel-villas-at-poco-diablo.html">Подробнее</a>
+                           <a class="button button-booking" href="hotel-booking.html">Забронировать</a>
+                           <div class="rating rating-stars">
+                               <img src="img/star.svg" alt="Рейтинг гостиницы 2 звезды">
+                               <img src="img/star.svg" alt="">
+                           </div>
+                           <p class="raing rating-number">
+                               Рейтинг: 9.2
+                           </p>
+                       </li>
+                   </ul>
+               </section>
+            </main>
+            <footer class="main-footer">
          <p class="hashtag">#VISITSEDONA</p>
          <ul class="social-list">
             <li><a class="social-button social-button-twitter" href="#">Твиттер</a></li>
@@ -159,5 +160,6 @@
            <a href="https://htmlacademy.ru/intensive/htmlcss">Ссылка на лендинг интенсива по HTML и CSS</a>
          </p>
        </footer>
+       </div>
     </body>
 </html>
