--- a/index.html
+++ b/index.html
@@ -8,124 +8,126 @@
     <link  href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="photo-video.html">Фото и видео</a></li>
-          <li><a href="map.html">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>
-        </ul>
-        <a class="main-header-logo">
-          <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
-        </a>
-      </nav>
-   </header>
-    <main class="container">
-      <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
-        <section class="hero">
-            <h2 class="visually-hidden">Главная фотография города Седона</h2>
-          <img src="img/welcome-text.png" height="400" width="500" alt="Добро пожаловать в Седону">
-        </section>
-        <div class="main-promo-wrapper">
-            <b class="promo-bold">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
-            <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
-        </div>
-        <section class="advantages">
-          <h2 class="visually-hidden">Преимущества городка</h2>
-          <ul class="advantages-list"> <!--  Основной список -->
-             <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-text">№1</p>
-              <p class="advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            </li>
-            <li class="advantages-item">
-               <ul class="advantages-inner-list">  <!-- Вложенный список -->
-                 <li class="advantages-item advantages-item-white advantages-item-icon"> <!-- Элемент белого списка -->
-                  <h3 class="advantages-title">Жилье</h3>
-                  <p class="advantages-text-black">Рекомендуем пожить в настоящем мотеле, все как в кино! </p>
-                </li>
-                <li class="advantages-item advantages-item-white advantages-item-icon">
-                  <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-text-black">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-                </li>
-                <li class="advantages-item advantages-item-white advantages-item-icon">
-                  <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-text-black">Не только китайского, но и местного производства!</p>
-                </li>
+    <div class="main-wrapper">  
+        <header class="main-header">
+          <nav class="main-navigation">
+            <ul class="site-navigation">
+              <li><a href="info.html">Информация</a></li>
+              <li><a href="photo-video.html">Фото и видео</a></li>
+              <li><a href="map.html">Карта штата</a></li>
+              <li><a href="hotels.html">Гостиницы</a></li>
             </ul>
-            </li>
-              <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
-                <p class="advantages-text">№2</p>
-                <p class="advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-              </li>
-              <li class="advantages-item">
-              <ul class="advantages-inner-list"> <!-- Вложенный список -->
-                <li class="advantages-item advantages-item-grey"> <!-- Элемент белого списка -->
-                  <h3 class="advantages-title">Небольшая площадь</h3>
-                  <p class="advantages-text">№3</p>
-                  <p class="advantages-text">Все достопримечательности находятся очень близко</p>
-                </li>
-                <li class="advantages-item advantages-item-grey">
-                  <h3 class="advantages-title">Красивая дорога</h3>
-                  <p class="advantages-text">№4</p>
-                  <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
-                </li>
-                <li class="advantages-item advantages-item-grey">
-                  <h3 class="advantages-title">Мало туристов</h3>
-                  <p class="advantages-text">№5</p>
-                  <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
-                </li>
-              </ul>
-              </li>
-          </ul>
-          </section>
-          <section class="hotels">
-            <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-            <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
-            <b>Заинтересовались?</b>
-            <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <section class="modal modal-hotels-search">
-                <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
-                    <p class="hotels-search-item">
-                        <label for="arrival-date-field">Дата заезда</label>
-                        <input type="text" class="date" name="arrival-date" id="arrival-date-field" placeholder=" ">
-                    </p>
-                    <p class="hotels-search-item">
-                        <label for="departure-date-field">Дата выезда</label>
-                        <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
-                    </p>
-                     <p class="hotels-search-item">
-                         <label for="adults-number-field">Взрослые</label>
-                         <button class="button hotel-search-button-plus"></button>
-                         <input type="text" name="adults-number" id="adults-number-field">
-                         <button class="button hotel-search-button-minus"></button>
-                    </p>
-                    <p class="hotels-search-item">
-                        <label for="children-number-field">Дети</label>
-                        <button class="button hotel-search-button-plus" type="button"></button>
-                        <input type="text" name="children-number" id="children-number-field">
-                        <button class="button hotel-search-button-minus" type="button"></button>
-                   </p>
-                    <button class="button hotel-search-button" type="submit">Найти</button>
-                </form>
+            <a class="main-header-logo">
+              <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
+            </a>
+          </nav>
+        </header>
+        <main class="container">
+          <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
+            <section class="hero">
+                <h2 class="visually-hidden">Главная фотография города Седона</h2>
+              <img src="img/welcome-text.png" height="400" width="500" alt="Добро пожаловать в Седону">
             </section>
-            <div class="map">
-                <img src="img/map.jpg" width="1200" height="470" alt="Карта Седоны">
+            <div class="main-promo-wrapper">
+                <b class="promo-bold">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
+                <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
             </div>
-        </section>
-    </main>
-    <footer class="main-footer">
-      <p class="hashtag">#VISITSEDONA</p>
-      <ul class="social-list">
-         <li><a class="social-button social-button-twitter" href="#">Твиттер</a></li>
-         <li><a class="social-button social-button-facebook" href="#">Фейсбук</a></li>
-         <li><a class="social-button social-button-youtube" href="#">Ютуб</a></li>
-      </ul>
-      <p class="copyright">
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Ссылка на лендинг интенсива по HTML и CSS</a>
-      </p>
-    </footer>
+            <section class="advantages">
+              <h2 class="visually-hidden">Преимущества городка</h2>
+              <ul class="advantages-list"> <!--  Основной список -->
+                 <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
+                  <h3 class="advantages-title">Настоящий городок</h3>
+                  <p class="advantages-text">№1</p>
+                  <p class="advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+                </li>
+                <li class="advantages-item">
+                   <ul class="advantages-inner-list">  <!-- Вложенный список -->
+                     <li class="advantages-item advantages-item-white advantages-item-icon"> <!-- Элемент белого списка -->
+                      <h3 class="advantages-title">Жилье</h3>
+                      <p class="advantages-text-black">Рекомендуем пожить в настоящем мотеле, все как в кино! </p>
+                    </li>
+                    <li class="advantages-item advantages-item-white advantages-item-icon">
+                      <h3 class="advantages-title">Еда</h3>
+                      <p class="advantages-text-black">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    </li>
+                    <li class="advantages-item advantages-item-white advantages-item-icon">
+                      <h3 class="advantages-title">Сувениры</h3>
+                      <p class="advantages-text-black">Не только китайского, но и местного производства!</p>
+                    </li>
+                </ul>
+                </li>
+                  <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
+                    <h3 class="advantages-title">Там есть мост дьявола</h3>
+                    <p class="advantages-text">№2</p>
+                    <p class="advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+                  </li>
+                  <li class="advantages-item">
+                  <ul class="advantages-inner-list"> <!-- Вложенный список -->
+                    <li class="advantages-item advantages-item-grey"> <!-- Элемент белого списка -->
+                      <h3 class="advantages-title">Небольшая площадь</h3>
+                      <p class="advantages-text">№3</p>
+                      <p class="advantages-text">Все достопримечательности находятся очень близко</p>
+                    </li>
+                    <li class="advantages-item advantages-item-grey">
+                      <h3 class="advantages-title">Красивая дорога</h3>
+                      <p class="advantages-text">№4</p>
+                      <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+                    </li>
+                    <li class="advantages-item advantages-item-grey">
+                      <h3 class="advantages-title">Мало туристов</h3>
+                      <p class="advantages-text">№5</p>
+                      <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
+                    </li>
+                  </ul>
+                  </li>
+              </ul>
+              </section>
+              <section class="hotels">
+                <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+                <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
+                <b>Заинтересовались?</b>
+                <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <section class="modal modal-hotels-search">
+                    <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
+                        <p class="hotels-search-item">
+                            <label for="arrival-date-field">Дата заезда</label>
+                            <input type="text" class="date" name="arrival-date" id="arrival-date-field" placeholder=" ">
+                        </p>
+                        <p class="hotels-search-item">
+                            <label for="departure-date-field">Дата выезда</label>
+                            <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
+                        </p>
+                         <p class="hotels-search-item">
+                             <label for="adults-number-field">Взрослые</label>
+                             <button class="button hotel-search-button-plus"></button>
+                             <input type="text" name="adults-number" id="adults-number-field">
+                             <button class="button hotel-search-button-minus"></button>
+                        </p>
+                        <p class="hotels-search-item">
+                            <label for="children-number-field">Дети</label>
+                            <button class="button hotel-search-button-plus" type="button"></button>
+                            <input type="text" name="children-number" id="children-number-field">
+                            <button class="button hotel-search-button-minus" type="button"></button>
+                       </p>
+                        <button class="button hotel-search-button" type="submit">Найти</button>
+                    </form>
+                </section>
+                <div class="map">
+                    <img src="img/map.jpg" width="1200" height="470" alt="Карта Седоны">
+                </div>
+            </section>
+        </main>
+        <footer class="main-footer">
+          <p class="hashtag">#VISITSEDONA</p>
+          <ul class="social-list">
+             <li><a class="social-button social-button-twitter" href="#">Твиттер</a></li>
+             <li><a class="social-button social-button-facebook" href="#">Фейсбук</a></li>
+             <li><a class="social-button social-button-youtube" href="#">Ютуб</a></li>
+          </ul>
+          <p class="copyright">
+            <a href="https://htmlacademy.ru/intensive/htmlcss">Ссылка на лендинг интенсива по HTML и CSS</a>
+          </p>
+        </footer>
+    <div>
   </body>
 </html>
